# Hybrid-models-for-TS-processing

./: .env.example  .gitattributes  .gitignore  HybridModels_M3.ipynb  README.md  check.ipynb  eval_m3.py  eval_synth.py  factories.py  m3_utils.py  project_paths.py  pyproject.toml  settings.py  train_utils.py
configs/: m3_eval.json  m3_eval_helformer.json  synth_eval.json
docs/: Praktika_4_Lykov.docx  ~$aktika_4_Lykov.docx
hybrids/: modwt.py  modwt_hybrid.py
models/: nbeats_v2.py  timesnet_blocks.py  timesnet_v2.py
src/data/m3/csv/: M3_monthly_FTS.csv  M3_monthly_TRAIN.csv  M3_monthly_TSTS.csv  M3_other_FTS .csv  M3_other_TSTS.csv  M3_quarterly_FTS.csv  M3_quarterly_TRAIN.csv  M3_quarterly_TSTS.csv  M3_yearly_FTS.csv  M3_yearly_TRAIN.csv  M3_yearly_TSTS.csv
src/hybridts/: __init__.py
src/hybridts/config/: __init__.py  settings.py
src/hybridts/data/: __init__.py  m3.py
src/hybridts/hybrids/: __init__.py  modwt.py  modwt_hybrid.py
src/hybridts/models/: __init__.py  classic.py  factory.py  helformer.py  nbeats.py  timesnet.py  timesnet_blocks.py
src/hybridts/pipelines/: __init__.py  m3_eval.py  synth_eval.py
src/hybridts/training/: __init__.py  datasets.py  engine.py
src/outputs/m3_eval/: metrics.csv  monthly_helformer_dataset.pt  monthly_helformer_model.pt  quarterly_helformer_dataset.pt  quarterly_helformer_model.pt  yearly_helformer_dataset.pt  yearly_helformer_model.pt
