[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridts"
version = "0.1.0"
description = "Hybrid neural models for time-series forecasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HybridTS Team" }]
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scipy",
  "PyWavelets",
  "matplotlib"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hybridts" = ["py.typed"]
